Revert "fix: remove padding and overflow hidden as it cropped the search"
This reverts commit 16ad75a26ac09fc37fdfdc1ad893094946354359.

--- a/themes/embark/source/assets/scss/04-objects/_objects.header.scss
+++ b/themes/embark/source/assets/scss/04-objects/_objects.header.scss
@@ -1,5 +1,6 @@
 .c-header {
   padding: get-spacing-inset(l) get-spacing-inset(l) get-spacing-inset(l);
+  border-radius: $border-radius;
   background-color: get-color-layout(spot);
   background-image: url(/assts/images/dummy-background.png);
   background-position: center right;
