--- a/themes/embark/source/css/02-generic/_generic.reset.scss
+++ b/themes/embark/source/css/02-generic/_generic.reset.scss
@@ -8,6 +8,7 @@ html {
 
 body {
   margin: 0;
+  padding: get-spacing-inline(m);
   color: $font-base-color;
   font-family: $font-base-family;
   font-size: $font-base-size;
