--- a/themes/embark/source/css/04-objects/_objects.header.scss
+++ b/themes/embark/source/css/04-objects/_objects.header.scss
@@ -1,6 +1,8 @@
 .c-header {
+  overflow: hidden;
   padding: get-spacing-inset(m) get-spacing-inset(m) get-spacing-inset(l);
   position: relative;
+  border-radius: $border-radius;
   background-color: get-color-layout(dark);
   color: get-color-layout(darkGradation);
 
